# shop_vesinh

./: .gitignore  App.tsx  Makefile  README.md  index.html  metadata.json  package.json  prd.md  pyproject.toml
backend/: .env.example  auth.py  database.py  main.py  models.py
backend/routers/: admin.py  auth.py  products.py
components/: EditProductModal.tsx  Navbar.tsx
frontend/: App.tsx  constants.ts  index.css  index.html  package-lock.json  package.json  types.ts
frontend/components/: CartDrawer.tsx  Formatters.ts  Navbar.tsx  ProtectedRoute.tsx
frontend/layouts/: AdminLayout.tsx  PublicLayout.tsx
frontend/pages/: AdminPage.tsx  LoginPage.tsx
frontend/services/: toastContext.tsx
pages/: HomePage.tsx  ProductDetailPage.tsx
services/: cartContext.tsx  productContext.tsx  toastContext.tsx
